--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,34 +15,35 @@
 ##
 [versions]
 accompanist = "0.32.0"
-activityCompose = "1.8.2"
-androidGradlePlugin = "8.2.1"
+activityCompose = "1.10.1"
+androidGradlePlugin = "8.9.0"
 
 # @keep
-compose-compiler = "1.5.7"
-composeBom = "2023.10.01"
-composeLatest = "1.6.0-beta03"
+compose-compiler = "1.5.6"
+composeBom = "2025.02.00"
+composeLatest = "1.7.8"
 
 coroutines = "1.7.3"
-espresso = "3.5.1"
-gson = "2.9.0"
-hilt = "2.50"
-hiltNavigationCompose = "1.1.0"
+espresso = "3.6.1"
+gson = "2.10.1"
+hilt = "2.51.1"
+hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
-kotlin = "1.9.21"
-ksp = "1.9.21-1.0.15"
+kotlin = "2.0.0"
+ksp = "2.0.0-1.0.22"
 # @keep
-ktx = "1.7.0"
-lifecycle = "2.6.2"
-material3 = "1.2.0-beta01"
+ktx = "1.15.0"
+lifecycle = "2.8.7"
+material3 = "1.3.1"
+navigation = "2.7.7"
 # @keep
 okhttpLogging = "4.12.0"
 retrofit = "2.9.0"
-rule = "1.4.0"
+rule = "1.6.1"
 
 # @keep
-uiAutomator = "2.2.0"
-viewModelCompose = "2.6.2"
+uiAutomator = "2.3.0"
+viewModelCompose = "2.8.7"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
@@ -55,6 +56,7 @@ androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "ktx" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 androidx-test-rule = {module = "androidx.test:rules", version.ref = "rule"}
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "viewModelCompose" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
@@ -78,3 +80,4 @@ android-application = { id = "com.android.application", version.ref = "androidGr
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
