--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ espresso = "3.6.1"
 gson = "2.10.1"
 hilt = "2.51.1"
 hiltNavigationCompose = "1.2.0"
+hivemq-mqtt = "1.3.5"
 junit = "4.13.2"
 kotlin = "2.0.0"
 ksp = "2.0.0-1.0.22"
@@ -67,6 +68,7 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+hivemq-mqtt = { module = "com.hivemq:hivemq-mqtt-client", version.ref = "hivemq-mqtt" }
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
